css/base.css
html {
    background-color: #ffe2d1;
    font-family: 'Roboto Mono', monospace;
    color: #1c1c1c;
    --scroll-behavior: smooth;
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
}

.super {
    color: #ffe2d1;
    background-color: #1c1c1c;
}

.active-nav {
    background-color: #1c1c1c;
    color: white;
}

a {
    color: #1D8A99;
    font-weight: 600;
    text-decoration: none;
    line-height: 1.7;
    transition: ease-in 0.2s;
    padding: 0.2rem;
}

a:hover {
    color: #A4D4B4;
}

main {
    margin: 0 auto;
}

section {
    transition: 0.3s ease-in-out;
    border-bottom: solid 4px #1c1c1c;
}

#navi {
    list-style-type: none;
    display: inline-block;
}

li {
    display: inline-block;
    padding: 0.5rem;
}

p {
    font-weight: 400;
    line-height: 1.6;
}

.sidebar {
    background-color: #ffe2d1;
    border-right: solid 4px #1c1c1c;
    box-sizing: border-box;
    position: sticky;
    top: 0;
}

.sidebar--wrapper {
    padding: 2rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

/* media query smartphone */
@media screen and (min-width:0rem) {
    .container {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: auto 100px;
        grid-template-areas:
            "hd hd hd hd main main main main main main main main"
            "hd hd hd hd ft ft ft ft ft ft ft ft";
    }
    .main {
        grid-area: main;
    }
    .sidebar {
        grid-area: hd;
        height: 100vh;
    }
    .footer {
        /* grid-area: ft; */
        padding: 0.5rem 0.5rem 1rem 0.5rem;
        bottom: 0;
        grid-area: ft;
        font-size: 0.8rem;
    }
    p {
        font-size: 0.8rem;
    }
    h1 {
        font-size: 1rem;
    }
    section {
        height: 60vh;
    }
    #navi {
        padding: 0;
        font-size: 0.6rem;
    }
    .section__wrapper {
        padding: 1rem 1rem;
    }
}

/* media query 48rem ipad landscape */
@media screen and (min-width: 48rem) {
    .container {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: auto 100px;
        grid-template-areas:
            "hd hd hd main main main main main main main main main"
            "hd hd hd ft ft ft ft ft ft ft ft ft";
    }
    .main {
        grid-area: main;
    }
    .sidebar {
        grid-area: hd;
        height: 100vh;
    }
    p {
        font-size: 1.3rem;
        ;
    }
    h1 {
        font-size: 1.9rem;
    }
    .section__wrapper {
        padding: 4rem 6rem;
    }
    .footer {
        padding: 2rem;
        font-size: 1rem;
    }
    #navi {
        font-size: 1rem;
    }
    section {
        height: auto;
    }
}

/* media query 64rem laptop screen */

@media screen and (min-width:64rem) {
    /* general layout */
    .container {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: auto;
        grid-template-areas:
            "hd hd main main main main main main main main main main"
            "hd hd ft ft ft ft ft ft ft ft ft ft";
    }
    .main {
        /* grid-area: main; */
    }
    .sidebar {
        /* grid-area: hd; */
        height: 100vh;
    }
    section {
        height: calc(100vh - 20vh);
    }
}

